# workspace

./: .gitattributes  .gitignore  .mcp.json  CLAUDE.md  DSP-GPU.code-workspace  configGPU.json  setup_debian.md
.claude/: settings.json  settings.json.bak-2026-05-13  settings.local.json
.claude/agents/: benchmark-analyzer.md  build-agent.md  cmake-fixer.md  deep-reviewer.md  doc-agent.md  doxygen-maintainer.md  doxytags.md  fix-agent.md  gpu-optimizer.md  mega-coordinator.md  memorybank-keeper.md  module-auditor.md  module-doc-writer.md  module-tester.md  module-writer.md  python-binder.md  release-manager.md  repo-sync.md  task-kernelcache-v2.md  task-linalg-tests.md  task-profiler-v2.md  test-agent.md  workflow-coordinator.md
.claude/commands/: audit.md  bench.md  comment.md  doc.md  optimizer.md
.claude/hooks/: on_stop.ps1  on_stop.sh  post_write.ps1  post_write.sh  pre_bash.ps1  pre_bash.sh
.claude/rules/: 00-new-task-workflow.md  04-testing-python.md  05-architecture-ref03.md  06-profiling.md  07-console-output.md  08-logging.md  10-modules.md  11-python-bindings.md  12-cmake-build.md  14-cpp-style.md  15-cpp-testing.md  17-llm-bench.md
.continue/rules/: 00-overview.md  01-bans.md  02-architecture.md
.cursor/rules/: gpu-architecture.mdc  gpu-profiler-output.mdc  kodo-workflow-tools.mdc  no-pytest.mdc  no-worktree-writes.mdc  run-test-no-confirm.mdc  test-patterns.mdc
MemoryBank/: MASTER_INDEX.md  README_sync_rules.md  specs.lnk  sync_rules.py
MemoryBank/.agent/: CHEATSHEET_Skills.md  agent_doxytags_plan.md
MemoryBank/.architecture/: DSP-GPU_Architecture_Analysis.md  DSP-GPU_Design_C4_Full.md
MemoryBank/.architecture/CMake/Version/: CMakeLists.txt  test_version.cpp
MemoryBank/.claude/: CLAUDE-debian.md
MemoryBank/.future/: README.md  TASK_gtest_variant_for_external_projects.md  TASK_namespace_migration_legacy_to_dsp.md  TASK_pybind_native_crashes_2026-05-04.md  TASK_pybind_review.md  TASK_remove_opencl_legacy_classes_2026-05-08.md  TASK_script_dsl_rocm.md
MemoryBank/Dinis/: PROMPT_FormYA221DelayTm1Byte.md
MemoryBank/RAG_LLM_install/: 00_README_INDEX.md  01_PATTERN_Architecture.md  02_STACK_Components.md  03_DEPLOY_FromScratch.md  04_RAG_Pipeline.md  05_DATASET_and_FineTune.md  06_PRODUCTION_Inference.md  07_OPERATIONS_Runbook.md  TASK_RAGLLM_deploy_INDEX.md
MemoryBank/archive/: README.md
MemoryBank/changelog/: 2026-04-15_core_spectrum_followups.md  2026-04-15_signal_generators_cleanup.md  2026-04-15_stats_snr_integration.md  2026-04.md  2026-05.md
MemoryBank/feedback/: C1a_params_extract_review_2026-05-08.md  C1b_params_extract_review_2026-05-08.md  profiler_e_review_2026-04-27.md  review_claude_md_system_2026-04-22.md  supermemory_listprojects_bug.md  supermemory_reproducer.sh
MemoryBank/hooks/: pre-commit
MemoryBank/orchestrator_state/: STATE.md
MemoryBank/pao/: README.md
MemoryBank/pao/templates/rag-mentor/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
MemoryBank/pao/templates/rag-mentor/MemoryBank/: MASTER_INDEX.md.template
MemoryBank/pao/templates/rag-mentor/config/: mcp_servers.yaml  secrets.env.example  stack.dev.json  stack.prod.json  targets.yaml.example
MemoryBank/pao/templates/rag-pao/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
MemoryBank/pao/templates/rag-pao/MemoryBank/: MASTER_INDEX.md.template
MemoryBank/pao/templates/rag-pao/config/: access_policy.yaml  secrets.env.example  targets.yaml.example
MemoryBank/pao/templates/rag-pao/pipelines/_template/: README.md  _WIP.md  pipeline.yaml.template
MemoryBank/pao/templates/rag-pao/pipelines/_template/collectors/: README.md
MemoryBank/pao/templates/rag-pao/pipelines/_template/golden_set/: Q1_Q10_acceptance.jsonl.template  README.md
MemoryBank/pao/templates/rag-pao/pipelines/_template/prompts_override/: README.md
MemoryBank/prompts/: 2026-04-16_continue_core_spectrum.md  C1b_params_extract_fixes_2026-05-08.md  README.md  TEMPLATE_continue_review.md  discuss_dataset_next_2026-05-10.md  handoff_2026-05-08_evening_to_sister.md  handoff_2026-05-09_C1b_to_CTX2.md  handoff_RAG_hybrid_eval_2026-05-08.md  handoff_phase_b_next_session_2026-05-14.md  handoff_session_2026-05-08_late_evening.md  handoff_session_2026-05-09_morning.md  handoff_to_next_session_2026-05-10.md  profiler_e_review_handoff_2026-04-27.md  prompt_for_sister_phase_b_2026-05-14.md  rag_code_embeddings_2026-05-08.md  rag_context_pack_2026-05-08.md  rag_graph_extension_2026-05-08.md  rag_late_chunking_2026-05-08.md  rag_mcp_atomic_tools_2026-05-08.md  response_to_sister_2026-05-10.md  review_claude_md_system_2026-04-22.md  sister_a1_a2_a3_d2_DONE_2026-05-10.md  sister_d3_refusal_DONE_2026-05-10.md  sister_doxy_brief_DONE_2026-05-11.md  sister_doxy_brief_fill_2026-05-11.md  sister_inheritance_test_filter_2026-05-10.md  sister_n2_idioms_DONE_2026-05-10.md  sister_namespace_correction_2026-05-10.md  sister_patterns_md_p0_fixes_2026-05-10.md
MemoryBank/sessions/: 2026-04-23.md  2026-04-27.md  2026-05-04.md  2026-05-06_TASK_RAG_02.5_progress.md  2026-05-06_TASK_RAG_02.6_progress.md  2026-05-06_TASK_RAG_09_progress.md  2026-05-07.md  2026-05-08.md  2026-05-08_C1b_late_evening.md  2026-05-08_handoff_part2.md  2026-05-08_handoff_to_next_session.md  2026-05-09.md  2026-05-10.md  2026-05-11.md  2026-05-12.md  2026-05-13.md  2026-05-14.md  2026-05-19.md  2026-05-21.md  2026-05-24.md  2026-05-25.md  2026-05-26.md  2026-05-26_handoff.md  2026-05-28.md  2026-05-28_HANDOFF.md  2026-05-30.md  SESSION_2026-04-12_Phase3_3b.md  profiler_v2_baseline_2026-04-20.md
MemoryBank/specs/: DSP_Build_Matrix_Plan_2026-04-27.md  Doc_Sync_Plan_2026-04-22.md  GPUProfiler_Rewrite_Proposal_2026-04-16.md  GPUProfiler_Rewrite_Proposal_2026-04-16_REVIEW.md  Header_Comment_Format_Plan_2026-05-01.md  KernelCache_v2_Proposal_2026-04-16.md  LLM_Hardware_Brief_2026-04-22.docx  LLM_Hardware_Brief_2026-04-22.md  cmake_git_aware_build.md  (+57 more)
Results/: python_tests_report.json
scripts/: agent_team.py  build_all_docs.sh  check_profiling.py  check_profiling.sh  migration.py  run_agent_tests.py  run_agent_tests.sh
(+386 files in other folders)
