[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rag-pao"
version = "0.1.0"
description = "Executor для dual-RAG (mentor ↔ pao) — индексация C++, Qwen filler/judge, QLoRA"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "Alex Lan", email = "diving_73@gmail.com" }
]

dependencies = [
    # --- Indexing ---
    "tree-sitter>=0.21.0",
    "tree-sitter-cpp>=0.21.0",
    "libclang>=16.0.0",
    "blake3>=0.4.0",                  # incremental hash

    # --- Retrieval ---
    "qdrant-client>=1.13.0",
    "sentence-transformers>=3.0.0",   # BGE-M3
    "rank-bm25>=0.2.2",

    # --- LLM serving ---
    # vllm устанавливается отдельно из ROCm wheel (Phase 01)
    "ollama>=0.4.0",                  # ollama python client
    "openai>=1.0.0",                  # vLLM OpenAI-compatible API

    # --- PG ---
    "psycopg[binary]>=3.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",

    # --- API ---
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0.0",

    # --- YAML / JSON ---
    "pyyaml>=6.0",
    "jsonschema>=4.21.0",

    # --- Logging ---
    "loguru>=0.7.0",

    # --- CLI ---
    "typer>=0.12.0",
    "rich>=13.7.0",

    # --- Finetune (импортируется из finetune/ submodule) ---
    # "transformers>=4.46.0",
    # "peft>=0.13.0",
    # "bitsandbytes>=0.49.0",
    # "trl>=0.11.0",
    # "datasets>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    # NO pytest — TestRunner only
]

[tool.setuptools.packages.find]
where = ["."]
include = ["rag_pao*"]
exclude = ["tests*", "MemoryBank*", "pipelines*", "current*", "targets*", "external_corpus*"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RET"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
